@@ -63,12 +63,14 @@
 
 - (NSString*) description
 {
-	return [NSString stringWithFormat:@"<%@ = %08X | TextureName=%d, Rect = (%.2f,%.2f,%.2f,%.2f)>", [self class], self,
+	return [NSString stringWithFormat:@"<%@ = %08X | TextureName=%d, Rect = (%.2f,%.2f,%.2f,%.2f)> rotated:%d", [self class], self,
 			texture_.name,
 			rect_.origin.x,
 			rect_.origin.y,
 			rect_.size.width,
-			rect_.size.height];
+			rect_.size.height,
+			rotated_
+			];
 }
 
 - (void) dealloc
